--- a/views/members/_form_fields.ejs
+++ b/views/members/_form_fields.ejs
@@ -38,19 +38,11 @@
       <div class="col-md-7 col-lg-8 mt-3">
        
           <div class="row g-3">
-            <div class="col-sm-6">
-              <label for="firstName" class="form-label">First name</label>
-              <input type="text" class="form-control" id="firstName" name="firstName" value="<%= member.firstName %>" required>
+            <div class="col-12">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" name="name" value="<%= member.name %>" required>
               <div class="invalid-feedback">
                 Valid first name is required.
-              </div>
-            </div>
-
-            <div class="col-sm-6">
-              <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" name="lastName" value="<%= member.lastName %>" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
               </div>
             </div>
 
