--- a/views/defects/index.ejs
+++ b/views/defects/index.ejs
@@ -1,4 +1,11 @@
-<h2>Defects</h2>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+  <h1 class="h2">Defects</h1>
+
+  <div class="btn-toolbar mb-2 mb-md-0 form-inline">
+      <a href="/defects/new" class="btn btn-outline-info mr-2">New</a>
+  </div>
+
+</div>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
