--- a/views/members/index.ejs
+++ b/views/members/index.ejs
@@ -1,4 +1,15 @@
-<h2>Members</h2>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+  <h1 class="h2">Members</h1>
+
+  <div class="btn-toolbar mb-2 mb-md-0 form-inline">
+      <a href="/members/new" class="btn btn-outline-info mr-2">New</a>
+      <form action="/members" method="GET">
+      <input type="text" class="form-control mr-sm-2" placeholder="Search" name="name" value="<%= searchOptions.name %>">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+  </div>
+
+</div>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
