--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,61 +1,28 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
-    <title>Floating labels example · Bootstrap</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/floating-labels/">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="/css/login.css" rel="stylesheet">
-  </head>
+  <%- include('./partials/authheader.ejs') %>
+  <title>Login</title> 
+  <link href="/css/login.css" rel="stylesheet">
   <body>
-    <form class="form-signin">
-  <div class="text-center mb-4">
-    <img class="mb-4" src="../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
+    <div class="container w-25">
+      <h1 class="text-center mt-2 mb-3 font-weight-normal">Login</h1>
+      <%- include('./partials/messages.ejs') %> 
+      <form action="/login" method="POST">
+  
+          <div class="form-group px-0">
+              <input type="email" name="email" class="form-control" placeholder="Email Address">
+          </div>
+  
+          <div class="form-group px-0">
+              <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
+  
+          <a class="float-right mt-0 mb-3 text-primary" href="/forgot">Forgot Password?</a>
+  
+          <button type="submit" class="btn btn-dark btn-block">Login</button>
+      </form>
+      <p class="text-center my-2 ">OR</p>
+      <a href="/signup" class="btn btn-dark btn-block">Sign Up</a>
   </div>
-
-  <div class="form-label-group">
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputEmail">Email address</label>
-  </div>
-
-  <div class="form-label-group">
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <label for="inputPassword">Password</label>
-  </div>
-
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2020</p>
-</form>
+  
+  
 </body>
 </html>
