--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,6 +7,7 @@
     <title>Bug Tracker</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">  
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -34,18 +35,18 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-brand">Cover</h3>
+      <h3 class="masthead-brand">Bug Tracker</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link active" href="">Home</a>
+        <a class="nav-link" target="_blank" href="https://github.com/SarveshKadam/Bug-Tracker">Github</a>
+        <a class="nav-link" target="_blank" href="https://www.sarveshkadam.com/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1 class="cover-heading">Bug Tracker.</h1>
+    <p class="lead">Track and maintain your defects</p>
     <p class="lead">
       <a href="/login" class="btn btn-lg btn-secondary">Login</a>
     </p>
@@ -53,7 +54,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>Made by <a target="_blank" href="https://twitter.com/kadamsarvesh10">@sarveshkadam</a>.</p>
     </div>
   </footer>
 </div>
